# engine-reverse-ide

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  TODO  example.msra  fixprice.msra  fixprice_new.msra  mkdocs.yml  package-lock.json  package.json  pyproject.toml  regular.md  setup.py  warmup.py
.github/workflows/: publish.yml  source-sync.yml
TODO/: TODO
TODO/1/: TODO  example.msraf  result.py
TODO/2/: TODO  example.msra  example.py  example2.py  result.py  variant.py
docs/: index.md  msra-app-defaults-func-headers.md  msra-app-func-body.md  msra-app-func-examples.md  msra-app-func-extractor.md  msra-app-func-headers.md  msra-app-func-input.md  msra-app-func-url.md  msra-app-func.md  msra-app-groups.md  msra-app-prefixes.md  msra-app-regexes.md  msra-app-variables.md  msra-app-warmup.md  msra-app.md  msra-generator-gaps.md  msra-language.md  msra-msra.md  msra-paths.md  msra-repo-b-sync.md
examples/: example.msra
examples/demo/: README.md  demo.msra  warmup.py
examples/example/: warmup.py
examples/fixprice/: advertising.msraf  catalog.msraf  catalog_sort.py  fixprice.msra  general.msraf  geolocation.msraf  goto_pipeline.py  warmup.py
msra_codegen/: README.md  __init__.py  bridge.py  cli.py  codegen_context.py  config.toml  core_naming.py  docs_generator.py  funcresult.py  generator.py  generator_config.py  github_workflows.py  gitignore.py  issue_templates.py  logo_assets.py  msra_serializer.py  node_export.js  package_metadata.py  package_writer.py  project_model.py  python_formatting.py  python_render.py  readme_pipeline.py  requirements.txt  template_engine.py  tests_generator.py  typespec.py  validation.py
msra_codegen/templates/: Makefile.tpl  README.md.tpl  abstraction.py.tpl  endpoints_init.py.tpl  example.py.tpl  function.py.tpl  gitignore.tpl  (+7 more)
postprocess/: catalog-product-info.evaluate.js
tests/: codegen.test.js  test_msra_language.py
vscode-extension/: .vscodeignore  extension.js  language-configuration.json  package-lock.json  package.json
(+52 files in other folders)
