[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msra-codegen"
description = "MSRA to async Python client generator"
readme = { file = "msra_codegen/README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
keywords = ["msra", "codegen", "generator", "python", "api"]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries",
]
dynamic = ["version", "dependencies"]

[project.scripts]
msra-codegen = "msra_codegen.cli:main"

[project.urls]
Homepage = "https://github.com/Open-Inflation/engine-reverse-ide"
Repository = "https://github.com/Open-Inflation/engine-reverse-ide"
Issues = "https://github.com/Open-Inflation/engine-reverse-ide/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["msra_codegen*"]

[tool.setuptools.dynamic]
version = { attr = "msra_codegen.__version__" }
dependencies = { file = ["msra_codegen/requirements.txt"] }

[tool.setuptools.package-data]
msra_codegen = [
  "config.toml",
  "node_export.js",
  "vscode-extension/lsp/*.js",
  "templates/*.tpl",
  "templates/*/*.tpl",
  "templates/*/*/*.tpl",
]
